# injection

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  localworks.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: conf.py  index.md  requirements.txt
docs/containers/: declarative-container.md  resolving.md
docs/dev/: contributing.md  migration-from-dependency-injector.md
docs/injection/: auto_injection.md  injection.md
docs/integration-with-web-frameworks/: drf.md  fastapi.md  flask.md  litestar.md  litestart.md
docs/introduction/: concepts-and-features.md  concepts-and-key_features.md  installation.md  key_features.md
docs/providers/: callable.md  coroutine.md  factory.md  object.md  partial_callable.md  provided_instance.md  resource.md  singleton.md  transient.md
docs/testing/: provider-overriding.md
src/injection/: __init__.py  __version__.py  auto_inject.py  base_container.py  container_registry.py  exceptions.py  inject.py  provide.py  provided.py  resolving.py
src/injection/inject/: auto_inject.py  exceptions.py  inject.py
src/injection/providers/: __init__.py  base.py  base_factory.py  callable.py  coroutine.py  factory.py  object.py  partial_callable.py  resource.py  singleton.py  transient.py
tests/: conftest.py  container_objects.py  test_attr_getter.py  test_auto_inject.py  test_base_container.py  test_container_registry.py  test_e2e.py  test_inject.py  test_provide.py  test_provided.py
tests/integration/: conftest.py
tests/integration/test_drf/: test_integration.py
tests/integration/test_drf/drf_test_project/: manage.py  settings.py  urls.py  views.py  wsgi.py
tests/integration/test_fastapi/: app.py  conftest.py  handlers.py  sqlalchemy_handlers.py  sqlalchemy_resource_case.py  test_fastapi.py  test_fastapi_injection.py  test_integration.py
tests/integration/test_flask/: test_integration.py
tests/integration/test_litestar/: test_integration.py
tests/test_integrations/test_drf/: test_integration.py
tests/test_integrations/test_drf/drf_test_project/: manage.py  settings.py  urls.py  views.py  wsgi.py
tests/test_integrations/test_fastapi/: app.py  handlers.py  test_integration.py
tests/test_integrations/test_flask/: test_integration.py
tests/test_integrations/test_litestar/: test_integration.py
tests/test_providers/: test_base_factory.py  test_callable.py  test_coroutine.py  test_object.py  test_partial_callable.py  test_resource.py  test_singleton.py  test_transient.py
